--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,14 @@
         }
     ],
     "require": {
-        "php": ">=5.6"
+        "php": ">=5.6",
+        "symfony/dotenv": "^3.3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7.21",
         "squizlabs/php_codesniffer": "^3.0.2",
-        "codeclimate/php-test-reporter": "^0.4.4"
+        "codeclimate/php-test-reporter": "^0.4.4",
+        "composer/composer": "^1.5.1"
     },
     "autoload": {
         "psr-4": {
@@ -24,7 +26,22 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "DotEnvParameterHandler\\": "tests"
+            "DotEnvParameterHandler\\": "tests/unit"
+        }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "DotEnvParameterHandler\\ScriptHandler::buildParameters"
+        ],
+        "post-update-cmd": [
+            "DotEnvParameterHandler\\ScriptHandler::buildParameters"
+        ]
+    },
+    "extra": {
+        "dot-env-parameter-handler": {
+            "source": ".env.dist",
+            "target": ".env",
+            "strategy": "copypaste"
         }
     }
 }
