--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7.21",
+        "mockery/mockery": "^0.9.9",
         "squizlabs/php_codesniffer": "^3.0.2",
         "codeclimate/php-test-reporter": "^0.4.4",
         "composer/composer": "^1.5.1"
