--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "DotenvParameterHandler\\": "tests/unit"
+            "DotenvParameterHandler\\": [
+                "tests/unit",
+                "tests/functional"
+            ]
         }
     }
 }
