--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,9 +9,14 @@
          beStrictAboutTodoAnnotatedTests="true"
          colors="true"
          verbose="true">
-    <testsuite name="Unit tests">
-        <directory>tests/unit</directory>
-    </testsuite>
+    <testsuites>
+        <testsuite name="Unit tests">
+            <directory>tests/unit</directory>
+        </testsuite>
+        <testsuite name="Functional tests">
+            <directory>tests/functional</directory>
+        </testsuite>
+    </testsuites>
 
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
